fix borders not showing on form submit feedback

--- a/blocks/form/form.css
+++ b/blocks/form/form.css
@@ -1,3 +1,4 @@
+
 .form-section {
     border: 1px solid var(--clr-gray-dark);
     padding: 15px;
@@ -166,7 +167,7 @@
 p.form-success {
     color: #0f5132;
     background-color: #d1e7dd;
-    border-color: #badbcc;
+    border: 1px solid #badbcc;
     padding: 1.5em;
     width: 50vw;
     text-align: center;
@@ -177,7 +178,7 @@ p.form-success {
 p.form-failure {
     color: #842029;
     background-color: #f8d7da;
-    border-color: #f5c2c7;
+    border: 1px solid #f5c2c7;
     padding: 1.5em;
     width: 50vw;
     text-align: center;
